     * Previously the kernel datapath did not enable UDP checksums by default
       in IPv6 tunnels.  This behaviour is non-standard, differs from the
       Linux kernel, and as also different than the userspace datapath.  Now
       these tunnels will calculate checksums by default and that behaviour can
       be changed with "options:csum=false" just as with the userspace
       datapath.


v3.3.0 - 16 Feb 2024
--------------------
   - OVSDB:
     * Support pre-vote mechanism in RAFT that protects the cluster against
       disruptive servers (section 9.6 of the original RAFT paper).  Upgrading
       from older version is supported but it may trigger more leader elections
       during the process, and error logs complaining unrecognized fields may
       be observed on old nodes.
     * New command line option --config-file that allows a fine control over
       remotes and database configuration, including setting options for
       connection methods for relays and active-backup replication.
       For more details see ovsdb-server(1) and ovsdb(7).
     * Make use of cooperative multitasking to improve maintenance of RAFT
       cluster during long running processing such as online schema conversion.
   - OpenFlow:
     * NXT_CT_FLUSH extension is updated to support flushing connections
       based on mark and labels.  'ct-flush' command of ovs-ofctl updated
       to support these new arguments accordingly.
   - ovs-appctl:
     * 'ofproto/trace' now reports OpenFlow rules that make up a conjunctive
       flow match.
     * Output of 'dpctl/show' command no longer shows interface configuration
       status, only values of the actual configuration options, a.k.a.
       'requested' configuration.  The interface configuration status,
       a.k.a. 'configured' values, can be found in the 'status' column of
       the Interface table, i.e. with 'ovs-vsctl get interface <..> status'.
       Reported names adjusted accordingly.